--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.21.2",
-    "@unocss/eslint-plugin": "^0.61.0",
-    "eslint": "^9.6.0"
+    "@unocss/eslint-config": "^0.61.0",
+    "@unocss/nuxt": "^0.61.0",
+    "eslint": "^9.6.0",
+    "unocss": "^0.61.0"
   }
 }
