--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "@antfu/eslint-config": "^2.21.2",
     "@unocss/eslint-config": "^0.61.0",
     "@unocss/nuxt": "^0.61.0",
-    "eslint": "^9.6.0",
-    "unocss": "^0.61.0"
+    "eslint": "^9.6.0"
   }
 }
